k8s/ingress/nginx-ingress-controller.yaml
# This is a simplified NGINX Ingress Controller setup
# For production, use Helm chart: https://kubernetes.github.io/ingress-nginx/deploy/

apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
# Note: For actual deployment, use the official Helm chart:
# helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
# helm repo update
# helm install ingress-nginx ingress-nginx/ingress-nginx \
#   --namespace ingress-nginx \
#   --create-namespace
